Arreglos de codigo terminado del modulo de reclamos

--- a/src/views/amp.ejs
+++ b/src/views/amp.ejs
@@ -142,10 +142,10 @@ $(document).ready(function(){
             {"data": "fecha_ocurrencia_amp"},
             {"data": "fecha_notificacion_amp"},
             {"data": "monto_reclamado_amp"},
-            {"data": "monto_pagado"},
+            {"data": "monto_pagado_amp"},
             {"data": "observacion_amp"},
             {"data": "tipo_moneda_amp"},
-            {"data": "estatus"},
+            {"data": "estatus_amp"},
             {
                 "data": "",
                 "render": (data, type, row) => {
