--- a/src/views/emergencies.ejs
+++ b/src/views/emergencies.ejs
@@ -142,10 +142,10 @@ $(document).ready(function(){
             {"data": "fecha_ocurrencia_emergencia"},
             {"data": "fecha_notificacion_emergencia"},
             {"data": "monto_reclamado_emergencia"},
-            {"data": "monto_pagado"},
+            {"data": "monto_pagado_emergencia"},
             {"data": "observacion_emergencia"},
             {"data": "tipo_moneda_emergencia"},
-            {"data": "estatus"},
+            {"data": "estatus_emergencia"},
             {
                 "data": "",
                 "render": (data, type, row) => {
