--- a/src/views/lettersGuarentee.ejs
+++ b/src/views/lettersGuarentee.ejs
@@ -142,10 +142,10 @@ $(document).ready(function(){
             {"data": "fecha_ocurrencia_carta_aval"},
             {"data": "fecha_notificacion_carta_aval"},
             {"data": "monto_reclamado_carta_aval"},
-            {"data": "monto_pagado"},
+            {"data": "monto_pagado_carta_aval"},
             {"data": "observacion_carta_aval"},
             {"data": "tipo_moneda_carta_aval"},
-            {"data": "estatus"},
+            {"data": "estatus_carta_aval"},
             {
                 "data": "",
                 "render": (data, type, row) => {
