--- a/src/views/refunds.ejs
+++ b/src/views/refunds.ejs
@@ -139,10 +139,10 @@ $(document).ready(function(){
             {"data": "fecha_ocurrencia_reembolso"},
             {"data": "fecha_notificacion_reembolso"},
             {"data": "monto_reclamo_reembolso"},
-            {"data": "monto_pagado"},
+            {"data": "monto_pagado_reembolso"},
             {"data": "observacion_reembolso"},
             {"data": "tipo_moneda_reembolso"},
-            {"data": "estatus"},
+            {"data": "estatus_reembolso"},
             {
                 "data": "",
                 "render": (data, type, row) => {
