--- a/src/views/editAMP.ejs
+++ b/src/views/editAMP.ejs
@@ -125,17 +125,46 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Clínica</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="text"
-                                                name="clinica_amp"
-                                                id="clinica_amp"
-                                                value="<%= amp.clinica_amp %>"
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
+                                    <div class="form-group">
+                                        <% if (naturalInsured === undefined) { %>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                        <option selected value="<%= amp.siniestro_nombre_amp %>"><%= amp.siniestro_nombre_amp %></option>
+                                                        <option value="<%= legalInsured.razon_social_per_jur %>"><%= legalInsured.razon_social_per_jur %></option>
+                                                        <% arrayBeneficiaryName.forEach((BeneficiaryName) => { %>
+                                                            <option value="<%= BeneficiaryName %>"><%= BeneficiaryName %></option>
+                                                        <% }); %>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        <% } else if (legalInsured === undefined) { %>
+                                            <% if (naturalInsured.rif_asegurado_per_nat === '') { %>
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                            <option selected value="<%= amp.siniestro_nombre_amp %>"><%= amp.siniestro_nombre_amp %></option>
+                                                            <option value="<%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %>"><%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %></option>
+                                                            <% arrayBeneficiaryName.forEach((BeneficiaryName) => { %>
+                                                                <option value="<%= BeneficiaryName %>"><%= BeneficiaryName %></option>
+                                                            <% }); %>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            <% } else { %>
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                            <option selected value="<%= amp.siniestro_nombre_amp %>"><%= amp.siniestro_nombre_amp %></option>
+                                                            <option value="<%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %>"><%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %></option>
+                                                            <% arrayBeneficiaryName.forEach((BeneficiaryName) => { %>
+                                                                <option value="<%= BeneficiaryName %>"><%= BeneficiaryName %></option>
+                                                            <% }); %>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            <% } %>
+                                        <% } %>
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
@@ -237,10 +266,23 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Clínica</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text"
+                                                name="clinica_amp"
+                                                id="clinica_amp"
+                                                value="<%= amp.clinica_amp %>"
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="estatus" id="estatus">
-                                                <option selected value="<%= amp.estatus %>"><%= amp.estatus %></option>
+                                                <option selected value="<%= amp.estatus_amp %>"><%= amp.estatus_amp %></option>
                                                     <option value="Pendiente">Pendiente</option>
                                                     <option value="Rechazado">Rechazado</option>
                                                     <option value="Liquidado">Liquidado</option>
@@ -256,7 +298,7 @@
                                                 step="0.01"
                                                 name="monto_pagado"
                                                 id="monto_pagado" 
-                                                value="<%= amp.monto_pagado %>"
+                                                value="<%= amp.monto_pagado_amp %>"
                                                 class="form-control"
                                                 required
                                             >
