--- a/src/views/editRefund.ejs
+++ b/src/views/editRefund.ejs
@@ -125,6 +125,48 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group">
+                                        <% if (naturalInsured === undefined) { %>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                        <option selected value="<%= refund.siniestro_nombre_reembolso %>"><%= refund.siniestro_nombre_reembolso %></option>
+                                                        <option value="<%= legalInsured.razon_social_per_jur %>"><%= legalInsured.razon_social_per_jur %></option>
+                                                        <% arrayBeneficiaryName.forEach((BeneficiaryName) => { %>
+                                                            <option value="<%= BeneficiaryName %>"><%= BeneficiaryName %></option>
+                                                        <% }); %>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        <% } else if (legalInsured === undefined) { %>
+                                            <% if (naturalInsured.rif_asegurado_per_nat === '') { %>
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                            <option selected value="<%= refund.siniestro_nombre_reembolso %>"><%= refund.siniestro_nombre_reembolso %></option>
+                                                            <option value="<%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %>"><%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %></option>
+                                                            <% arrayBeneficiaryName.forEach((BeneficiaryName) => { %>
+                                                                <option value="<%= BeneficiaryName %>"><%= BeneficiaryName %></option>
+                                                            <% }); %>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            <% } else { %>
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                            <option selected value="<%= refund.siniestro_nombre_reembolso %>"><%= refund.siniestro_nombre_reembolso %></option>
+                                                            <option value="<%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %>"><%= naturalInsured.nombre_asegurado_per_nat %> <%= naturalInsured.apellido_asegurado_per_nat %></option>
+                                                            <% arrayBeneficiaryName.forEach((BeneficiaryName) => { %>
+                                                                <option value="<%= BeneficiaryName %>"><%= BeneficiaryName %></option>
+                                                            <% }); %>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            <% } %>
+                                        <% } %>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
                                         <div class="col-sm-9">
                                             <textarea 
@@ -227,7 +269,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="estatus" id="estatus">
-                                                <option selected value="<%= refund.estatus %>"><%= refund.estatus %></option>
+                                                <option selected value="<%= refund.estatus_reembolso %>"><%= refund.estatus_reembolso %></option>
                                                     <option value="Pendiente">Pendiente</option>
                                                     <option value="Rechazado">Rechazado</option>
                                                     <option value="Liquidado">Liquidado</option>
@@ -243,7 +285,7 @@
                                                 step="0.01"
                                                 name="monto_pagado"
                                                 id="monto_pagado" 
-                                                value="<%= refund.monto_pagado %>"
+                                                value="<%= refund.monto_pagado_reembolso %>"
                                                 class="form-control"
                                                 required
                                             >
