--- a/src/views/letterGuaranteeForm.ejs
+++ b/src/views/letterGuaranteeForm.ejs
@@ -92,6 +92,16 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Siniestro</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="siniestro_nombre" id="siniestro_nombre">
+                                                    <option selected value="0">Seleccione *</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Observaciones</label>
                                         <div class="col-sm-9">
                                             <textarea 
