Arreglos de Codigo del modulo de Poliza

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -9652,7 +9652,8 @@ body.md-skin {
 
 .active-input-1,
 .active-input-2,
-#active-select-1 {
+#active-select-1,
+#active-select-2 {
   display: none;
 }
 
