--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -62,6 +62,7 @@
     window.addEventListener("load", function() {
         document.getElementById("radioContainer").addEventListener("click", function() {
             document.getElementById("active-select-1").style.display = document.getElementById("fraccionamiento_boolean_recibo").checked ? "inline" : "none";
+            document.getElementById("active-select-2").style.display = document.getElementById("fraccionamiento_boolean_recibo").checked ? "inline" : "none";
         });
     });
 </script>
@@ -221,21 +222,21 @@
                 var premiumMonthly = policy.prima_anual_poliza / 12;
                 premiumMonthly = premiumMonthly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
-            } else if (getSelectValue === 'Bimensual') {
-                var premiumBimonthly = policy.prima_anual_poliza / 6;
-                premiumBimonthly = premiumBimonthly.toFixed(2);
-                document.getElementById("monto_prima_recibo").value = premiumBimonthly;
+                document.getElementById("numero_pago_recibo").value = 12;
             } else if (getSelectValue === 'Trimestral') {
                 var premiumQuarterly = policy.prima_anual_poliza / 4;
                 premiumQuarterly = premiumQuarterly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumQuarterly;
+                document.getElementById("numero_pago_recibo").value = 4;
             } else if (getSelectValue === 'Semestral') {
                 var premiumBiannual = policy.prima_anual_poliza / 2;
                 premiumBiannual = premiumBiannual.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumBiannual;
+                document.getElementById("numero_pago_recibo").value = 2;
             }
             if (checkboxDivision === false) {
                 document.getElementById("monto_prima_recibo").value = policy.prima_anual_poliza;
+                document.getElementById("numero_pago_recibo").value = 0;
             }
         }
     </script>
