--- a/src/views/travelPolicyForm.ejs
+++ b/src/views/travelPolicyForm.ejs
@@ -26,7 +26,7 @@
                     <h5>Póliza Individual Viaje</h5>
                 </div>
                 <div class="ibox-content">
-                    <div id="form" class="wizard-big wizard-health">
+                    <div id="form" class="wizard-big">
                         <h1><i class="fa fa-window-maximize"></i> Póliza</h1>
                         <fieldset>
                             <form action="/sistema/add-travel-policy" method="POST">
@@ -355,9 +355,8 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
                                                     <div class="col-sm-9">
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculation()">
-                                                            <option selected value="">Seleccione *</option>
+                                                            <option selected value="">Seleccione</option>
                                                             <option value="Mensual">Mensual</option>
-                                                            <option value="Bimensual">Bimensual</option>
                                                             <option value="Trimestral">Trimestral</option>
                                                             <option value="Semestral">Semestral</option>
                                                         </select>
@@ -440,6 +439,23 @@
                                                         <option value="Financiamiento">Financiamiento</option>
                                                         <option value="Otros">Otros</option>
                                                     </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div id="active-select-2">
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="numero_pago_recibo"
+                                                            id="numero_pago_recibo"
+                                                            value="0" 
+                                                            class="form-control"
+                                                            onchange="premiumCalculation()"
+                                                        >
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -623,6 +639,99 @@
                                                         class="form-control"
                                                         required
                                                     >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <% if (typeof(receipt) !== 'undefined') { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="monto_comision_comision"
+                                                            id="monto_comision_comision"
+                                                            value="<%= receipt.monto_comision_recibo %>" 
+                                                            class="form-control"
+                                                            required
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } else { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="monto_comision_comision"
+                                                            id="monto_comision_comision"
+                                                            placeholder="Comisión Asociada *" 
+                                                            class="form-control"
+                                                            required
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } %>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-12 col-sm-offset-2">
+                                        <div class="card-body d-flex">
+                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </fieldset>
+                        <h1><i class="fa fa-check-square-o"></i> Factor de Verificación</h1>
+                        <fieldset>
+                            <form action="/sistema/add-travel-verification-factor" method="POST">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <% if (typeof(policy) !== 'undefined') { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="porcentaje_prima_factor_verificacion"
+                                                            id="porcentaje_prima_factor_verificacion"
+                                                            value="<%= policy.prima_anual_poliza %>" 
+                                                            class="form-control"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } else { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="porcentaje_prima_factor_verificacion"
+                                                            id="porcentaje_prima_factor_verificacion"
+                                                            placeholder="Porcentaje en dólares por prima *" 
+                                                            class="form-control"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } %>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus Comisión</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="estatus_comision_factor_verificacion">
+                                                        <option selected value="">Seleccione *</option>
+                                                        <option value="Pagado">Pagado</option>
+                                                        <option value="Pendiente">Pendiente</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
