--- a/src/views/vehicleCollectiveForm.ejs
+++ b/src/views/vehicleCollectiveForm.ejs
@@ -26,7 +26,7 @@
                     <h5>Colectivo Vehículo</h5>
                 </div>
                 <div class="ibox-content">
-                    <div id="form" class="wizard-big">
+                    <div id="form" class="wizard-big wizard-health">
                         <h1><i class="fa fa-window-maximize"></i> Colectivo</h1>
                         <fieldset>
                             <form action="/sistema/add-vehicle-collective" method="POST">
@@ -162,7 +162,7 @@
                                                         type="text"
                                                         name="cobertura_colectivo"
                                                         id="cobertura_colectivo"
-                                                        placeholder="Cobertura *" 
+                                                        placeholder="Cobertura" 
                                                         class="form-control"
                                                     >
                                                 </div>
@@ -292,7 +292,7 @@
                                                         type="text"
                                                         name="detalle_cliente_colectivo"
                                                         id="detalle_cliente_colectivo"
-                                                        placeholder="Detalle desde cuando es cliente *" 
+                                                        placeholder="Detalle desde cuando es cliente" 
                                                         class="form-control"
                                                     >
                                                 </div>
@@ -393,9 +393,8 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
                                                     <div class="col-sm-9">
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculation()">
-                                                            <option selected value="">Seleccione *</option>
+                                                            <option selected value="">Seleccione</option>
                                                             <option value="Mensual">Mensual</option>
-                                                            <option value="Bimensual">Bimensual</option>
                                                             <option value="Trimestral">Trimestral</option>
                                                             <option value="Semestral">Semestral</option>
                                                         </select>
@@ -481,6 +480,23 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div id="active-select-2">
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="numero_pago_recibo"
+                                                            id="numero_pago_recibo"
+                                                            value="0" 
+                                                            class="form-control"
+                                                            onchange="premiumCalculation()"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
                                                 <div class="col-sm-9">
@@ -563,9 +579,24 @@
                                                     <input 
                                                         type="number"
                                                         step="0.01" 
-                                                        name="porcentaje_ejecutivo_comision"
-                                                        id="porcentaje_ejecutivo_comision"
-                                                        placeholder="Porcentaje Ejecutivo *" 
+                                                        name="porcentaje_ejecutivo_suscripcion"
+                                                        id="porcentaje_ejecutivo_suscripcion"
+                                                        placeholder="Porcentaje Ejecutivo de Suscripción *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01" 
+                                                        name="porcentaje_ejecutivo_siniestro"
+                                                        id="porcentaje_ejecutivo_siniestro"
+                                                        placeholder="Porcentaje Ejecutivo de Siniestros *" 
                                                         class="form-control"
                                                         required
                                                     >
@@ -581,21 +612,6 @@
                                                         name="porcentaje_fundatina_comision"
                                                         id="porcentaje_fundatina_comision"
                                                         value="0.35" 
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01" 
-                                                        name="porcentaje_ejecutivo_suscripcion"
-                                                        id="porcentaje_ejecutivo_suscripcion"
-                                                        placeholder="Porcentaje Ejecutivo de Suscripción *" 
                                                         class="form-control"
                                                         required
                                                     >
@@ -635,6 +651,21 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                                <div class="col-sm-9">
+                                                    <input 
+                                                        type="number"
+                                                        step="0.01" 
+                                                        name="porcentaje_ejecutivo_cobranza"
+                                                        id="porcentaje_ejecutivo_cobranza"
+                                                        placeholder="Porcentaje Ejecutivo de Cobranzas *" 
+                                                        class="form-control"
+                                                        required
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Atina</label>
                                                 <div class="col-sm-9">
                                                     <input 
@@ -649,18 +680,96 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <% if (typeof(receipt) !== 'undefined') { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="monto_comision_comision"
+                                                            id="monto_comision_comision"
+                                                            value="<%= receipt.monto_comision_recibo %>" 
+                                                            class="form-control"
+                                                            required
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } else { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="monto_comision_comision"
+                                                            id="monto_comision_comision"
+                                                            placeholder="Comisión Asociada *" 
+                                                            class="form-control"
+                                                            required
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } %>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-12 col-sm-offset-2">
+                                        <div class="card-body d-flex">
+                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </fieldset>
+                        <h1><i class="fa fa-check-square-o"></i> Factor de Verificación</h1>
+                        <fieldset>
+                            <form action="/sistema/add-vehicle-verification-collective" method="POST">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <% if (typeof(collective) !== 'undefined') { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="porcentaje_prima_factor_verificacion"
+                                                            id="porcentaje_prima_factor_verificacion"
+                                                            value="<%= collective.prima_anual_colectivo %>" 
+                                                            class="form-control"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } else { %>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="number"
+                                                            step="0.01" 
+                                                            name="porcentaje_prima_factor_verificacion"
+                                                            id="porcentaje_prima_factor_verificacion"
+                                                            placeholder="Porcentaje en dólares por prima *" 
+                                                            class="form-control"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <% } %>
+                                    </div>
+                                    <div class="col-lg-6">
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus Comisión</label>
                                                 <div class="col-sm-9">
-                                                    <input 
-                                                        type="number"
-                                                        step="0.01" 
-                                                        name="porcentaje_ejecutivo_reclamo"
-                                                        id="porcentaje_ejecutivo_reclamo"
-                                                        placeholder="Porcentaje Ejecutivo de Reclamos *" 
-                                                        class="form-control"
-                                                        required
-                                                    >
+                                                    <select class="form-control" name="estatus_comision_factor_verificacion">
+                                                        <option selected value="">Seleccione *</option>
+                                                        <option value="Pagado">Pagado</option>
+                                                        <option value="Pendiente">Pendiente</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
