Arreglos de las vistas de DataTable y Index

--- a/src/views/editLegalInsured.ejs
+++ b/src/views/editLegalInsured.ejs
@@ -12,7 +12,7 @@
                 <a>Asegurados</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Agregar Póliza Persona Jurídica</strong>
+                <strong>Agregar Asegurado Persona Jurídica</strong>
             </li>
         </ol>
     </div>
