--- a/src/views/legalInsureds.ejs
+++ b/src/views/legalInsureds.ejs
@@ -11,7 +11,7 @@
                 <a>Asegurados</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Asegurados Pólizas Persona Jurídico</strong>
+                <strong>Consulta de Asegurados Persona Jurídico</strong>
             </li>
         </ol>
     </div>
@@ -21,7 +21,7 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Asegurados Pólizas Persona Jurídico</h5>
+                    <h5>Asegurados Persona Jurídico</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
@@ -171,7 +171,8 @@ $(document).ready(function(){
             }
         ],
         buttons: [
-            {extend: 'print',
+            {
+                extend: 'print',
                 customize: function (win){
                     $(win.document.body).addClass('white-bg');
                     $(win.document.body).css('font-size', '10px');
@@ -179,9 +180,30 @@ $(document).ready(function(){
                     $(win.document.body).find('table')
                             .addClass('compact')
                             .css('font-size', 'inherit');
+                },
+                text: 'Imprimir'
             }
+        ],
+        language: {
+            "decimal": "",
+            "emptyTable": "No hay información",
+            "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
+            "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
+            "infoFiltered": "(Filtrado de _MAX_ total entradas)",
+            "infoPostFix": "",
+            "thousands": ",",
+            "lengthMenu": "Mostrar _MENU_ Entradas",
+            "loadingRecords": "Cargando...",
+            "processing": "Procesando...",
+            "search": "Buscar:",
+            "zeroRecords": "Sin resultados encontrados",
+            "paginate": {
+                "first": "Primero",
+                "last": "Ultimo",
+                "next": "Siguiente",
+                "previous": "Anterior"
             }
-        ]
+        }
     });
     tablaAseguradoJuridico.rows.add(lista);
     tablaAseguradoJuridico.draw();
