--- a/src/views/editNaturalInsured.ejs
+++ b/src/views/editNaturalInsured.ejs
@@ -12,7 +12,7 @@
                 <a>Asegurados</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Editar Póliza Persona Natural</strong>
+                <strong>Editar Asegurado Persona Natural</strong>
             </li>
         </ol>
     </div>
