--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -52,6 +52,9 @@
                         </div>
                     </li>
                     <li>
+                        <a href="/sistema"><i class="fa fa-dashboard"></i> <span class="nav-label">Dashboard</span></a>
+                    </li>
+                    <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Datos</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/add-insurer">Agregar Aseguradora</a></li>
