--- a/src/views/healthPolicyForm.ejs
+++ b/src/views/healthPolicyForm.ejs
@@ -29,7 +29,7 @@
                     <div id="form" class="wizard-big wizard-health">
                         <h1><i class="fa fa-window-maximize"></i> Póliza</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-policy" method="POST">
+                            <form id="policy-form" action="/sistema/add-health-policy" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -120,11 +120,11 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_moneda_poliza">
-                                                        <option selected value="0">Seleccione *</option>
-                                                            <option value="Bolivar">Bolivar</option>
-                                                            <option value="Dólar">Dólar</option>
-                                                            <option value="Euros">Euros</option>
+                                                    <select class="form-control" name="tipo_moneda_poliza" required>
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="Bolivar">Bolivar</option>
+                                                        <option value="Dólar">Dólar</option>
+                                                        <option value="Euros">Euros</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -147,8 +147,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">¿Maternidad?</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="maternidad_poliza" id="maternidad_poliza" onchange="showInput()">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="maternidad_poliza" id="maternidad_poliza" onchange="showInput()" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Sí">Sí</option>
                                                         <option value="No">No</option>
                                                     </select>
@@ -171,8 +171,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Plazos de Espera</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="plazo_espera_poliza" id="plazo_espera_poliza" onchange="showInput2()">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="plazo_espera_poliza" id="plazo_espera_poliza" onchange="showInput2()" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Sí">Sí</option>
                                                         <option value="No">No</option>
                                                     </select>
@@ -275,8 +275,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Aseguradora</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="nombre_aseguradora">
-                                                        <option selected value="0">Seleccione *</option>
+                                                    <select class="form-control" name="nombre_aseguradora" required>
+                                                        <option value="">Seleccione *</option>
                                                         <% insurers.forEach((insurer) => { %>
                                                             <option value="<%= insurer.nombre_aseguradora %>"><%= insurer.nombre_aseguradora %></option>
                                                         <% }); %>
@@ -287,8 +287,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_canal_poliza">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="tipo_canal_poliza" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Redes Sociales">Redes Sociales</option>
                                                         <option value="Página Web">Página Web</option>
                                                         <option value="Área By Atina">Área By Atina</option>
@@ -314,18 +314,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-shield"></i> Beneficiarios</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-beneficiary" method="POST">
+                            <form id="extra-form" action="/sistema/add-health-beneficiary" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -359,8 +352,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Parentesco</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="parentesco_beneficiario" id="parentesco_beneficiario">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="parentesco_beneficiario" id="parentesco_beneficiario" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Padre">Padre</option>
                                                         <option value="Madre">Madre</option>
                                                         <option value="Cónyuge">Cónyuge</option>
@@ -405,10 +398,11 @@
                                         </div>
                                     </div>
                                 </div>
+                                <label class="col-sm-12 col-form-label">Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el ultimo beneficiario haga click en el botón siguiente</label>
                                 <div class="form-group row">
                                     <div class="col-sm-12 col-sm-offset-2">
                                         <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
+                                            <button class="btn btn-primary btn-sm ml-auto" type="submit">Guardar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -416,7 +410,7 @@
                         </fieldset>
                         <h1><i class="fa fa-file-text-o"></i> Recibo</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-receipt" method="POST">
+                            <form id="receipt-form" action="/sistema/add-health-receipt" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -463,7 +457,7 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
                                                     <div class="col-sm-9">
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculation()">
-                                                            <option selected value="">Seleccione</option>
+                                                            <option value="">Seleccione</option>
                                                             <option value="Mensual">Mensual</option>
                                                             <option value="Trimestral">Trimestral</option>
                                                             <option value="Semestral">Semestral</option>
@@ -510,8 +504,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo de recibo</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_recibo">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="tipo_recibo" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Emisión">Emisión</option>
                                                         <option value="Renovación">Renovación</option>
                                                         <option value="Modificación">Modificación</option>
@@ -535,8 +529,8 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Método de Pago</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="metodo_pago_recibo">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="metodo_pago_recibo" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Transferencia">Transferencia</option>
                                                         <option value="Zelle">Zelle</option>
                                                         <option value="Efectivo">Efectivo</option>
@@ -583,18 +577,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-usd"></i> Comisión</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-commission" method="POST">
+                            <form id="commission-form" action="/sistema/add-health-commission" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -784,18 +771,11 @@
                                         <% } %>
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
                             </form>
                         </fieldset>
                         <h1><i class="fa fa-check-square-o"></i> Factor de Verificación</h1>
                         <fieldset>
-                            <form action="/sistema/add-health-verification-factor" method="POST">
+                            <form id="verification-form" action="/sistema/add-health-verification-factor" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <% if (typeof(policy) !== 'undefined') { %>
@@ -834,20 +814,13 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Estatus Comisión</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="estatus_comision_factor_verificacion">
-                                                        <option selected value="">Seleccione *</option>
+                                                    <select class="form-control" name="estatus_comision_factor_verificacion" required>
+                                                        <option value="">Seleccione *</option>
                                                         <option value="Pagado">Pagado</option>
                                                         <option value="Pendiente">Pendiente</option>
                                                     </select>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-12 col-sm-offset-2">
-                                        <div class="card-body d-flex">
-                                            <button class="btn btn-primary btn-sm btn-circle ml-auto" type="submit"><i class="fa fa-check"></i></button>
                                         </div>
                                     </div>
                                 </div>
@@ -861,4 +834,4 @@
     </div>
 
 <!-- Se incluye el layout del footer -->
-<%- include('layouts/footerWizardForm') %>
+<%- include('layouts/footerExtraWizardForm') %>
